tdf#104287 RTF import: handle bitmap shapes inside tables

Regression from commit 015fd55c94b7b650ed8e572cafaf3b0f903b01b9
(tdf#96275 RTF import: fix anchor of shapes inside tables, 2016-05-10),
the problem was that since shapes inside tables are now buffered, some
previously hidden problems in the buffering became visible.

For one, there was no code to make sure that a bitmap shape is not
appended at the end of the buffer again when it gets re-played. For
another, only the bitmap shape itself was buffered, not its size.

(cherry picked from commit 8240be9170cc473506531dad2fda82469ae84443)

Conflicts:
	sw/qa/extras/rtfimport/rtfimport.cxx
	writerfilter/source/rtftok/rtfvalue.cxx
	writerfilter/source/rtftok/rtfvalue.hxx

Change-Id: I04d65eb794ff6b160ef77af85479ba25ea5f8aa7